# rust_llm_logger

./: .gitignore  Cargo.toml  README.md
examples/: ollama_request.sh  openai_request.sh
src/: lib.rs  main.rs  middleware.rs  proxy.rs  types.rs
src/parsers/: mod.rs  ollama.rs  openai.rs  passthrough.rs
tests/: mock_server.rs  parsers.rs
