[package]
name = "rust_llm_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework and HTTP
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSE parsing
async-sse = "5.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
chrono = "0.4"
tokio-stream = "0.1"
async-trait = "0.1"

[[bin]]
name = "mock_server"
path = "tests/mock_server.rs"
